# blink

./: .cproject  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
components/firstfunc/: CMakeLists.txt  firstfunct.c  firstfunct.h
components/uriparser/: CMakeLists.txt  UriIp4.c  UriMemory.h  UriNormalize.c
main/: CMakeLists.txt  blink.c  component.mk
