idf_component_register(SRCS "Uri.h"
						"UriBase.h"
						"UriCommon.c"
						"UriCommon.h"
						"UriCompare.c"
						"UriDefsAnsi.h"
						"UriDefsConfig.h"
						"UriDefsUnicode.h"
						"UriEscape.c"
						"UriFile.c"
						"UriIp4.c"
						"UriIp4.h"
						"UriIp4Base.c"
						"UriIp4Base.h"
						"UriMemory.c"
						"UriMemory.h"
						"UriNormalize.c"
						"UriNormalizeBase.c"
						"UriNormalizeBase.h"
						"UriParse.c"
						"UriParseBase.c"
						"UriParseBase.h"
						"UriQuery.c"
						"UriRecompose.c"
						"UriResolve.c"
						"UriShorten.c"
                  INCLUDE_DIRS "."
                  )